worked on homepage, fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
 
 .App {
   text-align: center;
+  margin: 0px;
+  padding: 0px;
+  max-width: 100%;
 }
 
 .App-logo {
